Fix overflow showing when a modal is opened

--- a/static/base.css
+++ b/static/base.css
@@ -116,6 +116,10 @@ html {
     background-color: var(--grey-600);
 }
 
+html.hide-overflow {
+	overflow: hidden;
+}
+
 :root {
     scroll-behavior: smooth;
     font-size: 16px;
